Don't try to determine a float's painter again if we've already done so.

Bug: 731044
Change-Id: I779e14da6c7fea524e6bf9582223ba25c2b5a308