third_party/WebKit/Source/core/layout/LayoutBlockFlow.cpp
@@ -4151,10 +4151,12 @@ void LayoutBlockFlow::UpdateAncestorShouldPaintFloatingObject(
        ancestor && ancestor->IsLayoutBlockFlow();
        ancestor = ancestor->Parent()) {
     LayoutBlockFlow* ancestor_block = ToLayoutBlockFlow(ancestor);
+		printf("trying ancestor_block %s\n", ancestor_block->DebugName().Utf8().data());
     FloatingObjects* ancestor_floating_objects =
         ancestor_block->floating_objects_.get();
     if (!ancestor_floating_objects)
       break;
+		printf("still trying ancestor_block %s\n", ancestor_block->DebugName().Utf8().data());
     FloatingObjectSet::iterator it =
         ancestor_floating_objects->MutableSet()
             .Find<FloatingObjectHashTranslator>(
@@ -4163,23 +4165,23 @@ void LayoutBlockFlow::UpdateAncestorShouldPaintFloatingObject(
       break;
 
     FloatingObject& floating_object = **it;
-    // This repeats the logic in addOverhangingFloats() about shouldPaint
-    // flag:
-    // - The nearest enclosing block in which the float doesn't overhang
-    //   paints the float;
-    // - Or even if the float overhangs, if the ancestor block has
-    //   self-painting layer, it paints the float.
-    LayoutBlockFlow* parent_block =
-        ToLayoutBlockFlow(floating_object.GetLayoutObject()->Parent());
-    bool is_overhanging_float =
-        parent_block && parent_block->IsOverhangingFloat(floating_object);
-    bool should_paint =
-        !float_box_is_self_painting_layer &&
-        (ancestor_block->HasSelfPaintingLayer() || !is_overhanging_float);
-    floating_object.SetShouldPaint(should_paint);
-
-    if (floating_object.ShouldPaint())
-      return;
+		printf("%s trying %i, %s, %i\n", floating_object.GetLayoutObject()->DebugName().Utf8().data(), float_box_is_self_painting_layer, ancestor_block->DebugName().Utf8().data(), ancestor_block->HasSelfPaintingLayer());
+    if (!float_box_is_self_painting_layer) {
+      // This repeats the logic in addOverhangingFloats() about shouldPaint
+      // flag:
+      // - The nearest enclosing block in which the float doesn't overhang
+      //   paints the float;
+      // - Or even if the float overhangs, if the ancestor block has
+      //   self-painting layer, it paints the float.
+      if (ancestor_block->HasSelfPaintingLayer() ||
+          !ancestor_block->IsOverhangingFloat(floating_object)) {
+        floating_object.SetShouldPaint(true);
+				printf("%s UpdateAncestorShouldPaintFloatingObject\n", floating_object.GetLayoutObject()->DebugName().Utf8().data());
+        return;
+      }
+    } else {
+      floating_object.SetShouldPaint(false);
+    }
   }
 }
 
